--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
-asgiref==3.2.10
+asgiref==3.7.2
 astroid==2.4.2
-Django==3.0.8
-djangorestframework==3.11.0
+colorama==0.4.6
+Django==5.0.1
+django-filter==23.5
+djangorestframework==3.14.0
+Faker==22.4.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
+Markdown==3.5.2
 mccabe==0.6.1
 pylint==2.5.3
+python-dateutil==2.8.2
 pytz==2020.1
-six==1.15.0
-sqlparse==0.3.1
+six==1.16.0
+sqlparse==0.4.4
 toml==0.10.1
+tzdata==2023.4
+validate-docbr==1.10.0
 wrapt==1.12.1
